WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206654
:matches() doesn't combine correctly with pseudo elements
https://bugs.webkit.org/show_bug.cgi?id=206654
Summary
:matches() doesn't combine correctly with pseudo elements
Antti Koivisto
Reported
2020-01-23 05:24:42 PST
Selectors like ::matches(foo, .parent .child)::first-letter never match.
Attachments
patch
(6.50 KB, patch)
2020-01-23 05:49 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(15.45 KB, patch)
2020-01-23 07:39 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(15.67 KB, patch)
2020-01-23 07:43 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(17.28 KB, patch)
2020-01-23 09:01 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-01-23 05:25:41 PST
:matches(foo, .parent .child)::first-letter
Antti Koivisto
Comment 2
2020-01-23 05:49:23 PST
Created
attachment 388537
[details]
patch
Antti Koivisto
Comment 3
2020-01-23 07:39:24 PST
Created
attachment 388542
[details]
patch
Antti Koivisto
Comment 4
2020-01-23 07:43:41 PST
Created
attachment 388543
[details]
patch
Antti Koivisto
Comment 5
2020-01-23 09:01:07 PST
Created
attachment 388551
[details]
patch
Simon Fraser (smfr)
Comment 6
2020-01-23 12:46:46 PST
How does this relate to
bug 145357
,
bug 181078
, and
bug 198204
?
Antti Koivisto
Comment 7
2020-01-24 00:02:16 PST
***
Bug 145357
has been marked as a duplicate of this bug. ***
Antti Koivisto
Comment 8
2020-01-24 00:03:23 PST
***
Bug 181078
has been marked as a duplicate of this bug. ***
Antti Koivisto
Comment 9
2020-01-24 00:03:52 PST
***
Bug 198204
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 10
2020-01-24 00:37:12 PST
Comment on
attachment 388551
[details]
patch Clearing flags on attachment: 388551 Committed
r255059
: <
https://trac.webkit.org/changeset/255059
>
WebKit Commit Bot
Comment 11
2020-01-24 00:37:14 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2020-01-24 00:38:16 PST
<
rdar://problem/58861903
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug