:matches() doesn't combine correctly with pseudo elements https://bugs.webkit.org/show_bug.cgi?id=206654

Reviewed by Simon Fraser.

Source/WebCore:

:matches() has been renamed to :is() in the spec (https://www.w3.org/TR/selectors-4/#matches).
Update the :matches implementation to spec behavior regarding pseudo element handling.

"Pseudo-elements cannot be represented by the matches-any pseudo-class; they are not valid within :is()."

Selectors like

    ::matches(foo, .parent .child)::first-letter

should work while

    ::matches(:first-letter)

shoudn't match anything.

Test: fast/selectors/matches-with-pseudo-element.html

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::matchRecursively const):
(WebCore::SelectorChecker::checkOne const):

Don't provide pseudoId into ::matches subselectors. Pseudo elements are not suppported inside ::matches.
If one if found, fail that subselector.

* css/SelectorChecker.h:

LayoutTests:

* TestExpectations:

Unskip fast/css/first-letter-and-float-crash.html which no longer hits assert due to this.

* fast/selectors/matches-with-pseudo-element-expected.html: Added.
* fast/selectors/matches-with-pseudo-element.html: Added.
* fast/css/currentColor-on-before-after-pseudo-elements.html:
* fast/css/matches-specificity-5.html:
* fast/selectors/pseudo-element-inside-matches-expected.html:
* fast/selectors/pseudo-element-inside-matches.html:

Update the existing tests to match the behavior.


Canonical link: https://commits.webkit.org/219733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255059 268f45cc-cd09-0410-ab3c-d52691b4dbfc